tycho-support 0.0.13
Signed-off-by: Igor Fedorenko <igor@ifedorenko.com>